# simple-btc-exchange

./: README.md
backend/: .gitignore  Dockerfile  Gemfile  README.md  development.sqlite3  docker-compose.yml
backend/app/controllers/: admin_controller.rb  application_controller.rb  deal_controller.rb
backend/app/models/: application_record.rb  bitcoin_network_api.rb  deal.rb  receiver.rb  wallet.rb
backend/app/views/admin/: index.html.erb
backend/config/: application.rb  cable.yml  credentials.yml.enc  puma.rb  routes.rb
backend/config/environments/: development.rb  production.rb
backend/config/locales/: en.yml
backend/db/: schema.rb
backend/db/migrate/: 20211109154558_create_transactions.rb  20211112140433_add_col.rb  20211112140930_coltype.rb  20211112211006_add_email.rb
frontend/: .eslintrc.js  BUILD.bazel  Dockerfile  README.md  docker-compose.yml  nuxt.config.ts  package.json
frontend/api/: applicationRepository.ts  createRepository.ts  externalApiRepository.ts  index.ts
frontend/assets/css/: reset.scss
frontend/components/: namevalue.vue
frontend/compositions/: index.ts  useApplication.ts  useDictionary.ts  useError.ts  useUtils.ts  useValidation.ts
frontend/layouts/: default.vue
frontend/pages/: index.vue  success.vue
frontend/plugins/: axios.ts  repository.ts
frontend/types/: index.ts  plugin-types.d.ts
